<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.FitWindowsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cassie_app.RegActivity"
    tools:showIn="@layout/activity_reg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/action_reg"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/reg_school_id"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/reg_school"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="52dp" />

        <RadioGroup
            android:id="@+id/reg_radio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:baselineAligned="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="345dp">

            <RadioButton
                android:id="@+id/reg_male"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/reg_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </RadioGroup>

        <EditText
            android:id="@+id/reg_name"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/reg_name"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="52dp" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="126dp" />

        <EditText
            android:id="@+id/reg_pw"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/reg_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:layout_editor_absoluteX="84dp"
            tools:layout_editor_absoluteY="204dp" />

        <EditText
            android:id="@+id/reg_pw_conf"
            android:layout_width="328dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/reg_confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryLight"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="283dp" />

        <RadioGroup
            android:id="@+id/reg_radio"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="20dp"
            android:baselineAligned="true"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="345dp">

            <RadioButton
                android:id="@+id/reg_teacher"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reg_teacher"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/reg_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reg_parent"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </RadioGroup>

        <Button
            android:id="@+id/reg_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            android:background="@color/colorAccent"
            android:text="@string/action_reg"
            android:textColor="@color/colorPrimaryDark"
            tools:layout_editor_absoluteX="83dp"
            tools:layout_editor_absoluteY="399dp" />

    </LinearLayout>

</android.support.v7.widget.FitWindowsLinearLayout>
