<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cassie_app.TeacherUploadFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/eprofile_logo" />

        <Button
            android:id="@+id/buttoncamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/camera_icon"
            android:gravity="left|center_vertical"
            android:text="@string/camera" />

        <Button
            android:id="@+id/buttonfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:drawableLeft="@drawable/from_file"
            android:gravity="left|center_vertical"
            android:text="@string/from_file" />

        <Button
            android:id="@+id/buttontext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/upload_text_icon"
            android:gravity="left|center_vertical"
            android:text="@string/text" />

    </LinearLayout>

</FrameLayout>
