<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cassie_app.TeacherRegActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLight">

        <EditText
            android:id="@+id/class_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="29dp"
            android:ems="10"
            android:hint="@string/reg_class_id"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/reg_submit2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@color/colorAccent"
            android:text="@string/action_reg"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/reg_as_teacher"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="24sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
