<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cassie_app.TeacherSettingsFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/class_id_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    tools:text="Class ID Here" />

                <Button
                    android:id="@+id/button_editpupil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginVertical="30dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:background="@color/colorAccent"
                    android:text="@string/edit_pupil"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/button_addpupil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginVertical="30dp"
                    android:background="@color/colorAccent"
                    android:text="@string/add_pupil"
                    android:textColor="@color/colorPrimaryDark" />


                <Button
                    android:id="@+id/button_deletepupil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginVertical="30dp"
                    android:background="@color/colorAccent"
                    android:text="@string/delete_pupil"
                    android:textColor="@color/colorPrimaryDark" />

                <Button
                    android:id="@+id/button_changepword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"
                    android:layout_marginVertical="30dp"
                    android:background="@color/colorAccent"
                    android:text="@string/change_pword"
                    android:textColor="@color/colorPrimaryDark" />


            </LinearLayout>
        </ScrollView>


    </LinearLayout>
